Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
 
 
-
+<table>
+  <tr></tr>
+  <tr></tr>
+  <tr></tr>
+  <tr></tr>
+  <tr></tr>
+</table>
   <!-- Write your HTML here -->
   
 </body>
