--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <th>State</th>
     <th>2017 estimate</th>
     </tr>
-  <tr></tr>
+  <tr>
+    <td>New York</td>
+    <td></td>
+    <td></td>
+  </tr>
   <tr></tr>
   <tr></tr>
   <tr></tr>
